[gd_scene load_steps=13 format=3 uid="uid://4w3a1rv4agdy"]

[ext_resource type="Script" uid="uid://cxj6td7xm7jqu" path="res://scenes/main scenes/Tutorial/TutorialCardTypes/tutorial_card_types.gd" id="1_q22xq"]
[ext_resource type="Shader" uid="uid://tvpfvluk8hvf" path="res://scenes/Menu/fracture_background.gdshader" id="2_g5hio"]
[ext_resource type="Texture2D" uid="uid://ccwuigx8bnpsp" path="res://assets/background/Fratura_central.jpg" id="3_x6re0"]
[ext_resource type="PackedScene" uid="uid://se8i2us8xx1p" path="res://scenes/main scenes/Match/pause_button.tscn" id="4_h2w63"]
[ext_resource type="Script" uid="uid://5hv4pjs1xcht" path="res://addons/richtext2/text_effects/anims/rte_fader.gd" id="5_3osw8"]
[ext_resource type="Script" uid="uid://b6mbstaftpedd" path="res://addons/richtext2/rich_text_animation.gd" id="6_e7o57"]
[ext_resource type="Script" uid="uid://c7x56t0480kpl" path="res://scenes/main scenes/Tutorial/TutorialCardTypes/deck_types.gd" id="7_sum2t"]
[ext_resource type="Texture2D" uid="uid://dqj57she863dn" path="res://assets/sprites/Slots/Quarzto.png" id="8_g5hio"]
[ext_resource type="PackedScene" uid="uid://dapf7tew78ua2" path="res://scenes/Cards/card_manager.tscn" id="9_x6re0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rrf51"]
shader = ExtResource("2_g5hio")
shader_parameter/speed = 1.0
shader_parameter/intensity = 1.5

[sub_resource type="RichTextEffect" id="RichTextEffect_2w2fg"]
resource_name = "fader"
script = ExtResource("5_3osw8")
metadata/rt = 11371831973494

[sub_resource type="LabelSettings" id="LabelSettings_x6re0"]
line_spacing = 0.0
font_size = 50
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[node name="TutorialCardTypes" type="Node2D"]
script = ExtResource("1_q22xq")

[node name="Fundo" type="Sprite2D" parent="."]
z_index = -10
material = SubResource("ShaderMaterial_rrf51")
position = Vector2(960, 540)
scale = Vector2(1.388, 1.388)
texture = ExtResource("3_x6re0")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1090)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.501961)

[node name="ContinueButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1741.0
offset_top = 987.0
offset_right = 1870.0
offset_bottom = 1030.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Continuar"

[node name="PauseButton" parent="." instance=ExtResource("4_h2w63")]

[node name="ReturnButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 987.0
offset_right = 179.0
offset_bottom = 1030.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Voltar"

[node name="TextBox" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(0, 147)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 310.0
offset_top = 820.0
offset_right = 1610.0
offset_bottom = 986.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/bold_italics_font_size = 35
theme_override_font_sizes/italics_font_size = 35
theme_override_font_sizes/mono_font_size = 35
theme_override_font_sizes/normal_font_size = 35
theme_override_font_sizes/bold_font_size = 35
bbcode_enabled = true
fit_content = true
custom_effects = [SubResource("RichTextEffect_2w2fg")]
script = ExtResource("6_e7o57")
progress = 1.0
visible_character = 219
_transforms = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 80, 38), Transform2D(1, 0, 0, 1, 90, 38), Transform2D(1, 0, 0, 1, 110, 38), Transform2D(1, 0, 0, 1, 144, 38), Transform2D(1, 0, 0, 1, 153, 38), Transform2D(1, 0, 0, 1, 175, 38), Transform2D(1, 0, 0, 1, 195, 38), Transform2D(1, 0, 0, 1, 212, 38), Transform2D(1, 0, 0, 1, 221, 38), Transform2D(1, 0, 0, 1, 238, 38), Transform2D(1, 0, 0, 1, 260, 38), Transform2D(1, 0, 0, 1, 275, 38), Transform2D(1, 0, 0, 1, 295, 38), Transform2D(1, 0, 0, 1, 312, 38), Transform2D(1, 0, 0, 1, 321, 38), Transform2D(1, 0, 0, 1, 341, 38), Transform2D(1, 0, 0, 1, 358, 38), Transform2D(1, 0, 0, 1, 367, 38), Transform2D(1, 0, 0, 1, 384, 38), Transform2D(1, 0, 0, 1, 405, 38), Transform2D(1, 0, 0, 1, 420, 38), Transform2D(1, 0, 0, 1, 434, 38), Transform2D(1, 0, 0, 1, 454, 38), Transform2D(1, 0, 0, 1, 471, 38), Transform2D(1, 0, 0, 1, 480, 38), Transform2D(1, 0, 0, 1, 502, 38), Transform2D(1, 0, 0, 1, 523, 38), Transform2D(1, 0, 0, 1, 540, 38), Transform2D(1, 0, 0, 1, 557, 38), Transform2D(1, 0, 0, 1, 580, 38), Transform2D(1, 0, 0, 1, 600, 38), Transform2D(1, 0, 0, 1, 633, 38), Transform2D(1, 0, 0, 1, 642, 38), Transform2D(1, 0, 0, 1, 656, 38), Transform2D(1, 0, 0, 1, 666, 38), Transform2D(1, 0, 0, 1, 687, 38), Transform2D(1, 0, 0, 1, 709, 38), Transform2D(1, 0, 0, 1, 726, 38), Transform2D(1, 0, 0, 1, 735, 38), Transform2D(1, 0, 0, 1, 744, 38), Transform2D(1, 0, 0, 1, 764, 38), Transform2D(1, 0, 0, 1, 773, 38), Transform2D(1, 0, 0, 1, 794, 38), Transform2D(1, 0, 0, 1, 811, 38), Transform2D(1, 0, 0, 1, 820, 38), Transform2D(1, 0, 0, 1, 842, 38), Transform2D(1, 0, 0, 1, 863, 38), Transform2D(1, 0, 0, 1, 885, 38), Transform2D(1, 0, 0, 1, 905, 38), Transform2D(1, 0, 0, 1, 939, 38), Transform2D(1, 0, 0, 1, 948, 38), Transform2D(1, 0, 0, 1, 965, 38), Transform2D(1, 0, 0, 1, 985, 38), Transform2D(1, 0, 0, 1, 1000, 38), Transform2D(1, 0, 0, 1, 1009, 38), Transform2D(1, 0, 0, 1, 1032, 38), Transform2D(1, 0, 0, 1, 1042, 38), Transform2D(1, 0, 0, 1, 1056, 38), Transform2D(1, 0, 0, 1, 1076, 38), Transform2D(1, 0, 0, 1, 1093, 38), Transform2D(1, 0, 0, 1, 1102, 38), Transform2D(1, 0, 0, 1, 1111, 38), Transform2D(1, 0, 0, 1, 1143, 38), Transform2D(1, 0, 0, 1, 1164, 38), Transform2D(1, 0, 0, 1, 1185, 38), Transform2D(1, 0, 0, 1, 1195, 38), Transform2D(1, 0, 0, 1, 1215, 38), Transform2D(1, 0, 0, 1, 1232, 38), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 11, 87), Transform2D(1, 0, 0, 1, 34, 87), Transform2D(1, 0, 0, 1, 55, 87), Transform2D(1, 0, 0, 1, 64, 87), Transform2D(1, 0, 0, 1, 84, 87), Transform2D(1, 0, 0, 1, 104, 87), Transform2D(1, 0, 0, 1, 121, 87), Transform2D(1, 0, 0, 1, 130, 87), Transform2D(1, 0, 0, 1, 151, 87), Transform2D(1, 0, 0, 1, 174, 87), Transform2D(1, 0, 0, 1, 183, 87), Transform2D(1, 0, 0, 1, 206, 87), Transform2D(1, 0, 0, 1, 223, 87), Transform2D(1, 0, 0, 1, 243, 87), Transform2D(1, 0, 0, 1, 260, 87), Transform2D(1, 0, 0, 1, 270, 87), Transform2D(1, 0, 0, 1, 279, 87), Transform2D(1, 0, 0, 1, 301, 87), Transform2D(1, 0, 0, 1, 321, 87), Transform2D(1, 0, 0, 1, 343, 87), Transform2D(1, 0, 0, 1, 363, 87), Transform2D(1, 0, 0, 1, 385, 87), Transform2D(1, 0, 0, 1, 407, 87), Transform2D(1, 0, 0, 1, 427, 87), Transform2D(1, 0, 0, 1, 449, 87), Transform2D(1, 0, 0, 1, 471, 87), Transform2D(1, 0, 0, 1, 493, 87), Transform2D(1, 0, 0, 1, 502, 87), Transform2D(1, 0, 0, 1, 524, 87), Transform2D(1, 0, 0, 1, 545, 87), Transform2D(1, 0, 0, 1, 554, 87), Transform2D(1, 0, 0, 1, 571, 87), Transform2D(1, 0, 0, 1, 591, 87), Transform2D(1, 0, 0, 1, 614, 87), Transform2D(1, 0, 0, 1, 623, 87), Transform2D(1, 0, 0, 1, 642, 87), Transform2D(1, 0, 0, 1, 662, 87), Transform2D(1, 0, 0, 1, 672, 87), Transform2D(1, 0, 0, 1, 693, 87), Transform2D(1, 0, 0, 1, 708, 87), Transform2D(1, 0, 0, 1, 718, 87), Transform2D(1, 0, 0, 1, 727, 87), Transform2D(1, 0, 0, 1, 747, 87), Transform2D(1, 0, 0, 1, 764, 87), Transform2D(1, 0, 0, 1, 781, 87), Transform2D(1, 0, 0, 1, 801, 87), Transform2D(1, 0, 0, 1, 818, 87), Transform2D(1, 0, 0, 1, 827, 87), Transform2D(1, 0, 0, 1, 841, 87), Transform2D(1, 0, 0, 1, 851, 87), Transform2D(1, 0, 0, 1, 872, 87), Transform2D(1, 0, 0, 1, 894, 87), Transform2D(1, 0, 0, 1, 911, 87), Transform2D(1, 0, 0, 1, 920, 87), Transform2D(1, 0, 0, 1, 930, 87), Transform2D(1, 0, 0, 1, 945, 87), Transform2D(1, 0, 0, 1, 965, 87), Transform2D(1, 0, 0, 1, 987, 87), Transform2D(1, 0, 0, 1, 996, 87), Transform2D(1, 0, 0, 1, 1006, 87), Transform2D(1, 0, 0, 1, 1028, 87), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 1051, 87), Transform2D(1, 0, 0, 1, 1073, 87), Transform2D(1, 0, 0, 1, 1090, 87), Transform2D(1, 0, 0, 1, 1100, 87), Transform2D(1, 0, 0, 1, 1120, 87), Transform2D(1, 0, 0, 1, 1135, 87), Transform2D(1, 0, 0, 1, 1144, 87), Transform2D(1, 0, 0, 1, 1166, 87), Transform2D(1, 0, 0, 1, 1188, 87), Transform2D(1, 0, 0, 1, 1197, 87), Transform2D(1, 0, 0, 1, 1214, 87), Transform2D(1, 0, 0, 1, 1237, 87), Transform2D(1, 0, 0, 1, 1254, 87), Transform2D(1, 0, 0, 1, 1267, 87), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 24, 136), Transform2D(1, 0, 0, 1, 46, 136), Transform2D(1, 0, 0, 1, 66, 136), Transform2D(1, 0, 0, 1, 81, 136), Transform2D(1, 0, 0, 1, 102, 136), Transform2D(1, 0, 0, 1, 111, 136), Transform2D(1, 0, 0, 1, 121, 136), Transform2D(1, 0, 0, 1, 142, 136), Transform2D(1, 0, 0, 1, 162, 136), Transform2D(1, 0, 0, 1, 182, 136), Transform2D(1, 0, 0, 1, 197, 136), Transform2D(1, 0, 0, 1, 206, 136), Transform2D(1, 0, 0, 1, 226, 136), Transform2D(1, 0, 0, 1, 235, 136), Transform2D(1, 0, 0, 1, 257, 136), Transform2D(1, 0, 0, 1, 278, 136), Transform2D(1, 0, 0, 1, 295, 136), Transform2D(1, 0, 0, 1, 304, 136), Transform2D(1, 0, 0, 1, 321, 136), Transform2D(1, 0, 0, 1, 343, 136), Transform2D(1, 0, 0, 1, 376, 136), Transform2D(1, 0, 0, 1, 398, 136), Transform2D(1, 0, 0, 1, 408, 136), Transform2D(1, 0, 0, 1, 430, 136), Transform2D(1, 0, 0, 1, 450, 136), Transform2D(1, 0, 0, 1, 468, 136), Transform2D(1, 0, 0, 1, 489, 136), Transform2D(1, 0, 0, 1, 509, 136), Transform2D(1, 0, 0, 1, 526, 136), Transform2D(1, 0, 0, 1, 535, 136), Transform2D(1, 0, 0, 1, 557, 136), Transform2D(1, 0, 0, 1, 578, 136), Transform2D(1, 0, 0, 1, 595, 136), Transform2D(1, 0, 0, 1, 612, 136), Transform2D(1, 0, 0, 1, 622, 136), Transform2D(1, 0, 0, 1, 641, 136), Transform2D(1, 0, 0, 1, 661, 136), Transform2D(1, 0, 0, 1, 671, 136), Transform2D(1, 0, 0, 1, 688, 136), Transform2D(1, 0, 0, 1, 697, 136), Transform2D(1, 0, 0, 1, 717, 136), Transform2D(1, 0, 0, 1, 739, 136), Transform2D(1, 0, 0, 1, 753, 136), Transform2D(1, 0, 0, 1, 768, 136), Transform2D(1, 0, 0, 1, 789, 136), Transform2D(1, 0, 0, 1, 798, 136), Transform2D(1, 0, 0, 1, 818, 136), Transform2D(1, 0, 0, 1, 828, 136), Transform2D(1, 0, 0, 1, 848, 136), Transform2D(1, 0, 0, 1, 865, 136), Transform2D(1, 0, 0, 1, 875, 136), Transform2D(1, 0, 0, 1, 884, 136), Transform2D(1, 0, 0, 1, 901, 136), Transform2D(1, 0, 0, 1, 923, 136), Transform2D(1, 0, 0, 1, 956, 136), Transform2D(1, 0, 0, 1, 978, 136), Transform2D(1, 0, 0, 1, 987, 136), Transform2D(1, 0, 0, 1, 1006, 136), Transform2D(1, 0, 0, 1, 1026, 136), Transform2D(1, 0, 0, 1, 1041, 136), Transform2D(1, 0, 0, 1, 1061, 136), Transform2D(1, 0, 0, 1, 1095, 136), Transform2D(1, 0, 0, 1, 1116, 136), Transform2D(1, 0, 0, 1, 1133, 136), Transform2D(1, 0, 0, 1, 1142, 136), Transform2D(1, 0, 0, 1, 1162, 136), Transform2D(1, 0, 0, 1, 1171, 136), Transform2D(1, 0, 0, 1, 1188, 136), Transform2D(1, 0, 0, 1, 1208, 136), Transform2D(1, 0, 0, 1, 1228, 136), Transform2D(1, 0, 0, 1, 1250, 136), Transform2D(1, 0, 0, 1, 1260, 136)])
_char_size = Array[Vector2]([Vector2(0, 0), Vector2(7, 27), Vector2(20, 27), Vector2(31, 27), Vector2(0, 27), Vector2(20, 27), Vector2(19, 27), Vector2(17, 27), Vector2(0, 27), Vector2(18, 27), Vector2(21, 27), Vector2(15, 27), Vector2(20, 27), Vector2(17, 27), Vector2(0, 27), Vector2(19, 27), Vector2(17, 27), Vector2(0, 27), Vector2(18, 27), Vector2(19, 27), Vector2(15, 27), Vector2(15, 27), Vector2(19, 27), Vector2(17, 27), Vector2(0, 27), Vector2(21, 27), Vector2(21, 27), Vector2(17, 27), Vector2(17, 27), Vector2(20, 27), Vector2(20, 27), Vector2(31, 27), Vector2(0, 27), Vector2(15, 27), Vector2(8, 27), Vector2(21, 27), Vector2(21, 27), Vector2(17, 27), Vector2(8, 27), Vector2(0, 27), Vector2(17, 27), Vector2(7, 27), Vector2(19, 27), Vector2(17, 27), Vector2(0, 27), Vector2(21, 27), Vector2(21, 27), Vector2(20, 27), Vector2(20, 27), Vector2(31, 27), Vector2(0, 27), Vector2(17, 27), Vector2(20, 27), Vector2(15, 27), Vector2(0, 27), Vector2(26, 27), Vector2(7, 27), Vector2(15, 27), Vector2(19, 27), Vector2(17, 27), Vector2(9, 27), Vector2(0, 27), Vector2(29, 27), Vector2(20, 27), Vector2(20, 27), Vector2(8, 27), Vector2(19, 27), Vector2(17, 27), Vector2(9, 27), Vector2(0, 0), Vector2(21, 27), Vector2(19, 27), Vector2(8, 27), Vector2(21, 27), Vector2(19, 27), Vector2(17, 27), Vector2(0, 27), Vector2(21, 27), Vector2(20, 27), Vector2(0, 27), Vector2(26, 27), Vector2(17, 27), Vector2(20, 27), Vector2(17, 27), Vector2(9, 27), Vector2(0, 27), Vector2(20, 27), Vector2(20, 27), Vector2(21, 27), Vector2(20, 27), Vector2(20, 27), Vector2(20, 27), Vector2(20, 27), Vector2(20, 27), Vector2(20, 27), Vector2(21, 27), Vector2(0, 27), Vector2(20, 27), Vector2(21, 27), Vector2(0, 27), Vector2(17, 27), Vector2(20, 27), Vector2(20, 27), Vector2(0, 27), Vector2(21, 27), Vector2(19, 27), Vector2(7, 27), Vector2(21, 27), Vector2(15, 27), Vector2(8, 27), Vector2(0, 27), Vector2(17, 27), Vector2(17, 27), Vector2(17, 27), Vector2(20, 27), Vector2(17, 27), Vector2(0, 27), Vector2(15, 27), Vector2(8, 27), Vector2(21, 27), Vector2(21, 27), Vector2(17, 27), Vector2(0, 27), Vector2(8, 27), Vector2(15, 27), Vector2(19, 27), Vector2(21, 27), Vector2(0, 27), Vector2(8, 27), Vector2(20, 27), Vector2(22, 27), Vector2(0, 0), Vector2(20, 27), Vector2(18, 27), Vector2(8, 27), Vector2(19, 27), Vector2(15, 27), Vector2(0, 27), Vector2(20, 27), Vector2(21, 27), Vector2(0, 27), Vector2(18, 27), Vector2(20, 27), Vector2(17, 27), Vector2(15, 27), Vector2(21, 27), Vector2(0, 0), Vector2(21, 27), Vector2(19, 27), Vector2(15, 27), Vector2(19, 27), Vector2(0, 27), Vector2(13, 27), Vector2(21, 27), Vector2(21, 27), Vector2(19, 27), Vector2(15, 27), Vector2(0, 27), Vector2(20, 27), Vector2(0, 27), Vector2(20, 27), Vector2(19, 27), Vector2(17, 27), Vector2(0, 27), Vector2(18, 27), Vector2(21, 27), Vector2(31, 27), Vector2(21, 27), Vector2(8, 27), Vector2(20, 27), Vector2(19, 27), Vector2(18, 27), Vector2(21, 27), Vector2(20, 27), Vector2(17, 27), Vector2(0, 27), Vector2(21, 27), Vector2(21, 27), Vector2(17, 27), Vector2(17, 27), Vector2(11, 27), Vector2(21, 27), Vector2(20, 27), Vector2(8, 27), Vector2(17, 27), Vector2(0, 27), Vector2(20, 27), Vector2(20, 27), Vector2(15, 27), Vector2(15, 27), Vector2(20, 27), Vector2(0, 27), Vector2(20, 27), Vector2(7, 27), Vector2(19, 27), Vector2(17, 27), Vector2(9, 27), Vector2(0, 27), Vector2(18, 27), Vector2(21, 27), Vector2(31, 27), Vector2(21, 27), Vector2(0, 27), Vector2(21, 27), Vector2(20, 27), Vector2(15, 27), Vector2(20, 27), Vector2(31, 27), Vector2(21, 27), Vector2(17, 27), Vector2(0, 27), Vector2(19, 27), Vector2(0, 27), Vector2(17, 27), Vector2(20, 27), Vector2(21, 27), Vector2(20, 27), Vector2(8, 27), Vector2(15, 27)])
_alpha = Array[float]([1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0])
_alpha_goal = Array[float]([1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0])
_forced_finish_delay = -0.044436
default_wait_time = 1.0
play_on_bbcode = true
play_speed = 50.0
fade_out = false
fade_in_speed = 10.0
fade_out_speed = 120.0
ctc_offset = Vector2(1, -0.5)
ctc_on_finished = false
ctc_on_wait = false
shortcut_expression = true
shortcut_bookmark = true
signal_quotes = true
signal_stars = true
bbcode = "Além das cores as cartas possuem tipos. Elas podem ser Altas, Médias, Baixas ou Áses, dependendo do seu valor. Esses tipos irão influciar no custo para jogar e nas combinações possíveis entre elas, como veremos a seguir"
effects = 2
alignment = 1
color = Color(1, 1, 1, 1)
emoji_scale = 1.0
font = ""
font_auto_setup = true
font_size = 35
font_bold_weight = 1.5
font_italics_slant = 0.25
font_italics_weight = -0.25
shadow_enabled = false
shadow_offset = 0.08
shadow_alpha = 0.25
shadow_outline_size = 0.1
outline_size = 0
outline_mode = 1
outline_adjust = 0.8
outline_hue_adjust = 0.0125
nicer_quotes_enabled = true
nicer_quotes_format = "“%s”"
markdown_enabled = true
markdown_format_bold = "[b]%s[]"
markdown_format_italics = "[i]%s[]"
markdown_format_bold_italics = "[bi]%s[]"
markdown_format_highlight = "[green;sin]%s[]"
markdown_format_bold2 = "[b]*%s*[]"
markdown_format_italics2 = "[i;gray]*%s*[]"
markdown_format_bold_italics2 = "%s"
context_enabled = true
context_path = NodePath("/root/State")
context_state = {}
context_rich_objects = true
context_rich_ints = true
context_rich_array = true
autostyle_numbers = false
autostyle_numbers_tag = "%s"
autostyle_numbers_pad_decimals = false
autostyle_numbers_decimals = 2
autostyle_emojis = true
effect_weight = 0.0
image_path = "res://"
image_resize_to_font_size = true
image_scale = 1.0
meta_auto_https = true
meta_cursor = 2
override_bbcodeEnabled = true
override_clipContents = false
override_fitContent = true
metadata/_custom_type_script = "uid://b6mbstaftpedd"

[node name="Labels" type="Node" parent="."]

[node name="Label" type="Label" parent="Labels"]
offset_left = 324.0
offset_top = 700.0
offset_right = 497.0
offset_bottom = 742.0
pivot_offset = Vector2(86, 21)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Cartas Altas"

[node name="Label2" type="Label" parent="Labels"]
offset_left = 679.5
offset_top = 700.0
offset_right = 884.5
offset_bottom = 742.0
pivot_offset = Vector2(102, 21)
theme_override_font_sizes/font_size = 30
text = "Cartas Médias"

[node name="Label3" type="Label" parent="Labels"]
offset_left = 1056.5
offset_top = 700.0
offset_right = 1251.5
offset_bottom = 742.0
pivot_offset = Vector2(97, 21)
theme_override_font_sizes/font_size = 30
text = "Cartas Baixas"

[node name="Label4" type="Label" parent="Labels"]
offset_left = 1493.0
offset_top = 700.0
offset_right = 1559.0
offset_bottom = 742.0
pivot_offset = Vector2(33, 21)
theme_override_font_sizes/font_size = 30
text = "Áses"

[node name="Node2D" type="Node2D" parent="."]

[node name="DeckTypes" type="Node2D" parent="."]
position = Vector2(-213, 540)
script = ExtResource("7_sum2t")

[node name="Sprite2D" type="Sprite2D" parent="DeckTypes"]
modulate = Color(1, 1, 1, 0.74902)
scale = Vector2(0.132258, 0.124358)
texture = ExtResource("8_g5hio")

[node name="Label" type="Label" parent="DeckTypes"]
z_index = 5
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -27.0
offset_right = 27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "0"
label_settings = SubResource("LabelSettings_x6re0")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CardManager" parent="." instance=ExtResource("9_x6re0")]

[connection signal="button_up" from="ContinueButton" to="." method="_on_continue_button_button_up"]
[connection signal="button_up" from="ReturnButton" to="." method="_on_return_button_button_up"]
